; ModuleID = '/home/carl/AnghaBench/h2o/lib/handler/extr_file.c_sendvec_update_refcnt.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/handler/extr_file.c_sendvec_update_refcnt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64* }
%struct.st_h2o_sendfile_generator_t = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*, i32*, i32)* @sendvec_update_refcnt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sendvec_update_refcnt(%struct.TYPE_3__* %0, i32* %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.st_h2o_sendfile_generator_t*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = load i64*, i64** %9, align 8
  %11 = getelementptr inbounds i64, i64* %10, i64 0
  %12 = load i64, i64* %11, align 8
  %13 = inttoptr i64 %12 to i8*
  %14 = bitcast i8* %13 to %struct.st_h2o_sendfile_generator_t*
  store %struct.st_h2o_sendfile_generator_t* %14, %struct.st_h2o_sendfile_generator_t** %7, align 8
  %15 = load i32, i32* %6, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %20

17:                                               ; preds = %3
  %18 = load %struct.st_h2o_sendfile_generator_t*, %struct.st_h2o_sendfile_generator_t** %7, align 8
  %19 = call i32 @h2o_mem_addref_shared(%struct.st_h2o_sendfile_generator_t* %18)
  br label %23

20:                                               ; preds = %3
  %21 = load %struct.st_h2o_sendfile_generator_t*, %struct.st_h2o_sendfile_generator_t** %7, align 8
  %22 = call i32 @h2o_mem_release_shared(%struct.st_h2o_sendfile_generator_t* %21)
  br label %23

23:                                               ; preds = %20, %17
  ret void
}

declare dso_local i32 @h2o_mem_addref_shared(%struct.st_h2o_sendfile_generator_t*) #1

declare dso_local i32 @h2o_mem_release_shared(%struct.st_h2o_sendfile_generator_t*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
